# information-theory

./: README.md
burrows-wheeler/: Cargo.toml  README.md  report.md
burrows-wheeler/files/: war&peace.txt
burrows-wheeler/src/: bwt.rs  config.rs  decode.rs  encode.rs  lib.rs  mtf.rs  mtftree.rs  result.rs  utils.rs
burrows-wheeler/src/huffman/: common.rs  decode.rs  encode.rs  header.rs  iterator.rs  mod.rs
burrows-wheeler/src/huffman/decode/: iterator.rs  mod.rs
burrows-wheeler/src/huffman/encode/: iterator.rs  mod.rs
burrows-wheeler/src/utils/: mod.rs
burrows-wheeler/tests/: code.rs
compress-utils/: Cargo.toml
compress-utils/src/: file.rs  lib.rs
huffman/: Cargo.toml  README.md
huffman/files/: poe.txt
huffman/src/: byte_processor.rs  common.rs  lib.rs  utils.rs
huffman/src/decode/: iterator.rs  mod.rs
huffman/src/encode/: iterator.rs  mod.rs
huffman/tests/: files.rs
jpg-improver/: Cargo.toml  README.md  report.md
jpg-improver/src/: lib.rs  rle.rs  utils.rs
jpg-improver/src/arithmetic/: decode.rs  encode.rs  frequencies.rs  mod.rs
