[package]
name = "burrows-wheeler"
version = "0.1.0"
authors = ["Simon <Simon Naumov>"]
edition = "2018"

[lib]
name = "burrows_wheeler"
test = true

[dependencies]
priority-queue = "1.2.0"
bit-vec = "0.6.3"
atlist-rs = "0.2.1"

# TODO remove json serializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
