[package]
name = "huffman"
version = "0.1.0"
authors = ["Simon <Simon Naumov>"]
edition = "2018"

[lib]
name = "huffman"
test = true

[dependencies]
priority-queue = "1.2.0"
maplit = "1.0.2"
bit-vec = "0.6.3"

# TODO remove json serializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
